# tmux-dashboard

./: .gitignore  ENHANCED_CREATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  pyproject.toml
docs/: INSTALL.md  TROUBLESHOOTING.md  headless-sessions.md  single-instance-enforcement.md  test-results.md
docs/ADR/: 002-single-instance-enforcement.md
docs/sdd/tmux-dashboard-sdd/: README.md  gaps.md  keyword-detection.md  manual-e2e-test.md  requirements.md  ui-flow.md
docs/sdd/tmux-dashboard-sdd/trello-cards/: 01-tmux-dashboard-scaffold.md  02-tmux-dashboard-tmux-manager.md  03-tmux-dashboard-ui-layout.md  04-tmux-dashboard-input-actions.md  05-tmux-dashboard-search-help.md  06-tmux-dashboard-preview.md  07-tmux-dashboard-delete.md  08-tmux-dashboard-autostart.md  09-tmux-dashboard-manual-e2e.md  AGENT_PROTOCOL.md  BOARD.md  KICKOFF.md  progress.md  state.json
scripts/: demo_enhanced_creation.sh  demo_single_instance.sh  demo_smart_instance.sh  install_zsh_autostart.sh  ssh_login_prompt.sh  tm
src/: __init__.py
src/tmux_dashboard/: __init__.py  __main__.py  app.py  codex_wrapper.py  config.py  headless.py  headless_prompts.py  headless_state.py  headless_view.py  input_handler.py  instance_lock.py  logger.py  models.py  prompts.py  session_actions.py  tmux_manager.py  ui.py
tests/: test_enhanced_creation.sh  test_headless.py  test_instance_lock.py  test_integration.sh  test_logger.py  test_single_instance.sh  test_tmux_status.py
